# Python-Basics-Fundamentals-for-Data-Science

./: Conditional_Statements.ipynb  Conditions_&_Loops_in_Python.ipynb  Conditions___Loops.ipynb  Conventional_Machine_Learning.ipynb  Data_Types.ipynb  Data_and_collection _types.ipynb  Decorators.ipynb  Exception_Handling.ipynb  File_IO_in_Python.ipynb  Global_and_Local_Variable.ipynb  Implementing_OOP_in_Python.ipynb  Operator.ipynb  Python Dictionary Methods.ipynb  Python Functions.ipynb  Python Operator.ipynb  Python Operators_ipynb.ipynb  Python,_operars_ipynb.ipynb  Python_buit_in_Sets_Methods.ipynb  README.md  Untitled4.ipynb  assignment_01_suresh_kumar_ipynb.ipynb  buit_in_Tuple_functions.ipynb  calculator_in_python_.ipynb  conditions___loops_in_python.ipynb  example.txt  functions.ipynb  python_buit_in_list_methods.ipynb
Object-Oriented-Programming/: Class vs Object in OOP.ipynb  Collection of class objects in OOP.ipynb  Encapsulation in OOP.ipynb  Implementing_OOP_in_Python.ipynb  Magic or Dunder Methods in OOP.ipynb  Mutibility of Object in OOP.ipynb  What is instance variable in OOP.ipynb  (+2 more)
fastapi_intro/: .gitignore  Pydantic.py  app.py  app.toml  main.py  patients.json  pyproject.toml  requirements.txt  text_processing.py
fastapi_intro/FastApi/: app.py  patients.json  streamlit_ui.py
fastapi_intro/Pydantic/: Pydantic.py  computed_fields.py  field_validator.py  model_validator.py  serialization.py
fastapi_intro/Serving ML Models/: app.py  fastapi_ml_model.ipynb  frontend.py  insurance.csv  model.pkl
fastapi_intro/basics/: text_processing.py
(+5 files in other folders)
